# AoC2020

./: Cargo.toml  README.md
src/: grid.rs  main.rs
